[package]
name = "fast-fibonacci"
version = "0.1.2"
license = "GPL-3.0-or-later"
authors = ["Dan <danmedani@gmail.com>"]
edition = "2018"
description = "Quickly find nth fibonacci number with modulo."

repository = "https://github.com/danmedani/fast-fibonacci"
keywords = ["fibonacci", "linear", "recurrence", "fast"]
readme = "README.md"

categories = ["algorithms"]

[dependencies]
ndarray = "0.13.1"
num-bigint = "0.2"
num = "0.2.0"

